--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"bootstrap": "^5.3.2"
+		"bootstrap": "^5.3.2",
+		"bootstrap-icons": "^1.11.2"
 	}
 }
