--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"type": "module",
 	"dependencies": {
 		"bootstrap": "^5.3.2",
-		"bootstrap-icons": "^1.11.2"
+		"bootstrap-icons": "^1.11.2",
+		"crypto-js": "^4.2.0"
 	}
 }
